Fixed authentication middleware to deal with admin, layout fixes

--- a/rooms/roomballot/templates/roomballot/staircase-view.html
+++ b/rooms/roomballot/templates/roomballot/staircase-view.html
@@ -87,8 +87,8 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mt-4">
+    <div class="row mb-4 mt-4">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mb-1">
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -120,7 +120,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-4 mb-4">
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mb-4">
             <div class="d-md-block">
             <div class="list-group">
                 {% if floorplan is not None %}
