--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -81,14 +81,14 @@
 
     <div class="row mt-4">
 
-        <div class="col-md-3 col-sm-12 mb-5 d-md-block sidebar">
+        <div class="col-md-3 col-sm-12 mb-4 d-md-block sidebar">
             <div class="list-group">
                 <a href="/roomballot/info" class="list-group-item active"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
                 <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
-                <a href="#" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="/roomballot/about" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
             </div>
         </div>
-        <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4">
+        <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
             <div class="row">
                 <div>
                     <h2>Ballot Information</h2>
@@ -131,7 +131,7 @@
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" data-toggle="collapse"
                                             data-target="#collapseTwo">
-                                        Do I need to be on the room ballot to get a room in college?
+                                        Do I need to be on the ballot?
                                     </button>
                                 </h5>
                             </div>
