--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -83,7 +83,7 @@
 
     <div class="border-bottom mb-3">
         <h2>Dashboard</h2>
-        <h5>Welcome, {{ student.first_name }}</h5>
+        <h5>Welcome, {{ student.first_name }}.</h5>
     </div>
 
     <div class="row">
