--- a/rooms/roomballot/templates/roomballot/status.html
+++ b/rooms/roomballot/templates/roomballot/status.html
@@ -28,16 +28,15 @@
 
     <div class="row mb-5">
 
-        <nav class="col-md-2 d-none d-md-block sidebar" id="navbarSupportedContent">
+        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
             <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><i class="fa fa-key"></i> <span>Dashboard</span></a>
-                <a href="#" class="list-group-item active"><i class="fa fa-credit-card"></i> <span>Status</span></a>
-                <a href="syndicates" class="list-group-item"><i class="fa fa-question-circle"></i> <span>Syndicates</span></a>
-                <a href="#" class="list-group-item"><i class="fa fa-arrow-circle-o-left"></i>
-                    <span>Students</span></a>
+                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
+                <a href="/roomballot/admin/status" class="list-group-item active"><span>Status</span></a>
+                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
+                <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
+                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
             </div>
-        </nav>
-
+        </div>
 
         <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
             <div class="row">
