--- a/rooms/roomballot/templates/roomballot/rooms-list.html
+++ b/rooms/roomballot/templates/roomballot/rooms-list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Syndicates | Downing JCR RBS</title>
+    <title>Rooms | Downing JCR RBS</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
@@ -32,37 +32,33 @@
             <div class="list-group">
                 <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
                 <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
-                <a href="/roomballot/admin/syndicates" class="list-group-item active"><span>Syndicates</span></a>
+                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
                 <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
-                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
+                <a href="/roomballot/admin/rooms" class="list-group-item active"><span>Rooms</span></a>
             </div>
         </div>
 
         <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
             <div class="row">
-
-                {% if syndicates %}
+                {% if rooms %}
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <table class="table table-bordered table-hover table-striped">
                         <thead>
                         <tr>
-                            <th scope="col">Syndicate ID</th>
-                            <th scope="col" class="d-none d-sm-table-cell">Owner</th>
-                            <th scope="col" class="d-none d-sm-table-cell">Year</th>
-                            <th scope="col">Complete?</th>
+                            <th scope="col">Staircase</th>
+                            <th scope="col">Room</th>
+                            <th scope="col" class="d-none d-sm-table-cell">Occupant</th>
                             <th scope="col"></th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for syndicate in syndicates %}
+                        {% for r in rooms %}
                             <tr>
-                                <td>{{ syndicate.syndicate_id }}</td>
-                                <td class="d-none d-sm-table-cell">{{ syndicate.owner_id }}</td>
-                                <td class="d-none d-sm-table-cell">{% if syndicate.year == 1 %}First{% else %}
-                                    Second{% endif %}</td>
-                                <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
+                                <td>{{ r.staircase }}</td>
+                                <td>{{ r.room_number }}</td>
+                                <td class="d-none d-sm-table-cell">{{ r.taken_by }}</td>
                                 <td class="text-center">
-                                    <a class="btn btn-primary" href="syndicate/{{ syndicate.syndicate_id }}">Manage</a>
+                                    <a class="btn btn-primary" href="/roomballot/admin/room/{{ r.room_id }}">View</a>
                                 </td>
                             </tr>
                         {% endfor %}
