--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -149,14 +149,14 @@
 
         <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
             <div class="list-group">
-                <a href="/roomballot/admin" class="list-group-item"><i class="fa fa-key"></i> <span>Dashboard</span></a>
-                <a href="../status" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Status</span></a>
-                <a href="../syndicates" class="list-group-item"><i class="fa fa-question-circle"></i>
-                    <span>Syndicates</span></a>
-                <a href="#" class="list-group-item"><i class="fa fa-arrow-circle-o-left"></i>
-                    <span>Students</span></a>
+                <a href="/roomballot/admin" class="list-group-item"><span>Dashboard</span></a>
+                <a href="/roomballot/admin/status" class="list-group-item"><span>Status</span></a>
+                <a href="/roomballot/admin/syndicates" class="list-group-item"><span>Syndicates</span></a>
+                <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
+                <a href="/roomballot/admin/rooms" class="list-group-item"><span>Rooms</span></a>
             </div>
         </div>
+
         <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb-2">
@@ -226,7 +226,7 @@
                             <td>
                                 {{ room }} <br>
                                 {% if student.has_allocated %}
-                                    <a href="../../room/{{ room.room_id }}" class="btn btn-primary">View</a>
+                                    <a href="/roomballot/admin/room/{{ room.room_id }}" class="btn btn-primary">View</a>
                                 {% endif %}
                             </td>
                         </tr>
