--- a/rooms/roomballot/templates/roomballot/room-select-confirm.html
+++ b/rooms/roomballot/templates/roomballot/room-select-confirm.html
@@ -14,6 +14,24 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        Tawk_API.visitor = {
+            name: '{{ student.first_name|escapejs }} {{ student.surname|escapejs }}',
+            email: '{{ request.user.username }}@cam.ac.uk'
+        };
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5b44b4b76d961556373d93d4/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </head>
 <body>
 
