--- a/rooms/roomballot/templates/roomballot/rooms-list.html
+++ b/rooms/roomballot/templates/roomballot/rooms-list.html
@@ -36,6 +36,7 @@
                 <a href="/roomballot/admin/students" class="list-group-item"><span>Students</span></a>
                 <a href="/roomballot/admin/rooms" class="list-group-item active"><span>Rooms</span></a>
             </div>
+            <a class="btn btn-primary mt-4" href="/roomballot/admin/rooms/export">Export as CSV</a>
         </div>
 
         <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
