Expanded knowledge base

--- a/rooms/roomballot/templates/roomballot/info-select-room.html
+++ b/rooms/roomballot/templates/roomballot/info-select-room.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>About | Downing JCR RBS</title>
+    <title>Selecting Your Room | Downing JCR RBS</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
@@ -87,22 +87,22 @@
                 <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
                 <a href="/roomballot/info/create-syndicate" class="list-group-item"><i class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
                 <a href="/roomballot/info/individual" class="list-group-item"><i class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
-                <a href="/roomballot/info/select-room" class="list-group-item"><i class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
-                <a href="/roomballot/about" class="list-group-item active"><i class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="/roomballot/info/select-room" class="list-group-item active"><i class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
+                <a href="/roomballot/about" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
             </div>
         </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
             <div class="row">
                 <div>
-                    <h2>About</h2>
+                    <h2>Selecting Your Room</h2>
                 </div>
                 <div class="border-top">
                     <p class="mt-3">
-                        This system was created, with love, by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
-                        Licence, and the source is available on <a href="https://github.com/dowjcr/rooms" target="blank">GitHub</a>.
-                        The backend uses the <a href="https://www.djangoproject.com/" target="blank">Django</a> framework, while the UI is simply
-                        built using Bootstrap and a little jQuery.<br><br>
-                        If you have any suggestions about how the system can be improved, please feel free to contact the Internet Officer
+                        Selecting your room is a piece of cake. When it's time to choose your room, navigate to the room
+                        you want to pick. Then click 'select this room'.
+                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/6.gif">
+                        If your selection is successful, you'll see your room on your Dashboard. If you've made a mistake,
+                        and want to change your selection, please get in touch through livechat, or email an administrator
                         at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.
                     </p>
                 </div>
