--- a/rooms/roomballot/templates/roomballot/info-create-syndicate.html
+++ b/rooms/roomballot/templates/roomballot/info-create-syndicate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>About | Downing JCR RBS</title>
+    <title>Creating Your Syndicate | Downing JCR RBS</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
@@ -85,26 +85,45 @@
             <div class="list-group">
                 <a href="/roomballot/info" class="list-group-item"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
                 <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
-                <a href="/roomballot/info/create-syndicate" class="list-group-item"><i class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
+                <a href="/roomballot/info/create-syndicate" class="list-group-item active"><i class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
                 <a href="/roomballot/info/individual" class="list-group-item"><i class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
                 <a href="/roomballot/info/select-room" class="list-group-item"><i class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
-                <a href="/roomballot/about" class="list-group-item active"><i class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="/roomballot/about" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
             </div>
         </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
             <div class="row">
                 <div>
-                    <h2>About</h2>
+                    <h2>Creating Your Syndicate</h2>
                 </div>
                 <div class="border-top">
                     <p class="mt-3">
-                        This system was created, with love, by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
-                        Licence, and the source is available on <a href="https://github.com/dowjcr/rooms" target="blank">GitHub</a>.
-                        The backend uses the <a href="https://www.djangoproject.com/" target="blank">Django</a> framework, while the UI is simply
-                        built using Bootstrap and a little jQuery.<br><br>
-                        If you have any suggestions about how the system can be improved, please feel free to contact the Internet Officer
-                        at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.
+                        You can feature on the ballot in two ways: either a individual or as part of a
+                        syndicate. A syndicate is a way for a group of people (Maximum 6 people) can choose rooms at
+                        the same time as each other. If you want to live with a certain group of people next year,
+                        being in a syndicate with them is a way to make that more likely because you can easily
+                        coordinate what you pick when it's your turn on ballot weekend. Being in a syndicate does
+                        not mean that you have to live with the people in it - it merely makes the option of living
+                        with them easier.<br><br>
+                        Once you have decided who you wish to form a syndicate with, you must create your syndicate
+                        on the room balloting system. On your Dashboard, click 'create syndicate'.
+                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/1.gif">
+                        Search for people you want to add to your syndicate. When the person appears, click their
+                        name to add them.
+                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/2.gif">
+                        Note that syndicates can comprise at most 6 people. If you make a mistake, click 'start again'
+                        and your selection will be cleared.
+                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/3.gif">
+                        Once you're happy with your selection, click 'create'. Your syndicate will be created, and you
+                        will be allocated a syndicate number.
+                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/4.gif">
+                        Then, sit back and wait for the invitees to accept their invitations. They will receive an email
+                        notification to remind them to accept the invitation. Once all invitees have accepted, you will
+                        receive an email notification confirming the syndicate is now complete.<br><br>
+
                     </p>
+
+
                 </div>
             </div>
     </div>
