--- a/rooms/roomballot/templates/roomballot/info-individual.html
+++ b/rooms/roomballot/templates/roomballot/info-individual.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>About | Downing JCR RBS</title>
+    <title>Ballot as an Individual | Downing JCR RBS</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
@@ -86,25 +86,30 @@
                 <a href="/roomballot/info" class="list-group-item"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
                 <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
                 <a href="/roomballot/info/create-syndicate" class="list-group-item"><i class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
-                <a href="/roomballot/info/individual" class="list-group-item"><i class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
+                <a href="/roomballot/info/individual" class="list-group-item active"><i class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
                 <a href="/roomballot/info/select-room" class="list-group-item"><i class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
-                <a href="/roomballot/about" class="list-group-item active"><i class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="/roomballot/about" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
             </div>
         </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
             <div class="row">
                 <div>
-                    <h2>About</h2>
+                    <h2>Ballot as an Individual</h2>
                 </div>
                 <div class="border-top">
                     <p class="mt-3">
-                        This system was created, with love, by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
-                        Licence, and the source is available on <a href="https://github.com/dowjcr/rooms" target="blank">GitHub</a>.
-                        The backend uses the <a href="https://www.djangoproject.com/" target="blank">Django</a> framework, while the UI is simply
-                        built using Bootstrap and a little jQuery.<br><br>
-                        If you have any suggestions about how the system can be improved, please feel free to contact the Internet Officer
-                        at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.
+                        You don't have to be in a syndicate with other people - you can also enter as an individual.
+                        To do this, you must create a syndicate with only you as a member.<br>
+                        From your Dashboard, click 'create syndicate', then 'create'.
+                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/5.gif">
+                        You will be allocated a syndicate number. Nothing more needs to be done - sit back, relax and
+                        wait for ballot day.<br><br>
+                        If you change your mind, and want to be added to somebody's syndicate, it's no problem! Just get in touch
+                        through livechat, or email an administrator at <a href="mailto:internet@jcr.dow.cam.ac.uk">
+                        internet@jcr.dow.cam.ac.uk</a>. Make sure you include the syndicate number in your message.<br><br>
                     </p>
+
+
                 </div>
             </div>
     </div>
