Fixed typos on KB

--- a/rooms/roomballot/templates/roomballot/info-create-syndicate.html
+++ b/rooms/roomballot/templates/roomballot/info-create-syndicate.html
@@ -98,8 +98,8 @@
                 </div>
                 <div class="border-top">
                     <p class="mt-3">
-                        You can feature on the ballot in two ways: either a individual or as part of a
-                        syndicate. A syndicate is a way for a group of people (Maximum 6 people) can choose rooms at
+                        You can feature on the ballot in two ways: either as an individual or as part of a
+                        syndicate. A syndicate is a way for a group of people (maximum 6 people) to choose rooms at
                         the same time as each other. If you want to live with a certain group of people next year,
                         being in a syndicate with them is a way to make that more likely because you can easily
                         coordinate what you pick when it's your turn on ballot weekend. Being in a syndicate does
@@ -107,19 +107,19 @@
                         with them easier.<br><br>
                         Once you have decided who you wish to form a syndicate with, you must create your syndicate
                         on the room balloting system. On your Dashboard, click 'create syndicate'.
-                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/1.gif">
+                        <img class="img-thumbnail mb-3 mt-3" src="/media/screenshots/1.gif">
                         Search for people you want to add to your syndicate. When the person appears, click their
                         name to add them.
-                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/2.gif">
+                        <img class="img-thumbnail mb-3 mt-3" src="/media/screenshots/2.gif">
                         Note that syndicates can comprise at most 6 people. If you make a mistake, click 'start again'
                         and your selection will be cleared.
-                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/3.gif">
+                        <img class="img-thumbnail mb-3 mt-3" src="/media/screenshots/3.gif">
                         Once you're happy with your selection, click 'create'. Your syndicate will be created, and you
                         will be allocated a syndicate number.
-                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/4.gif">
+                        <img class="img-thumbnail mb-3 mt-3" src="/media/screenshots/4.gif">
                         Then, sit back and wait for the invitees to accept their invitations. They will receive an email
-                        notification to remind them to accept the invitation. Once all invitees have accepted, you will
-                        receive an email notification confirming the syndicate is now complete.<br><br>
+                        notification to remind them to accept. Once all invitees have accepted, you will
+                        receive an email confirming the syndicate is now complete.<br><br>
 
                     </p>
 
