--- a/rooms/roomballot/templates/roomballot/info-individual.html
+++ b/rooms/roomballot/templates/roomballot/info-individual.html
@@ -101,7 +101,7 @@
                         You don't have to be in a syndicate with other people - you can also enter as an individual.
                         To do this, you must create a syndicate with only you as a member.<br>
                         From your Dashboard, click 'create syndicate', then 'create'.
-                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/5.gif">
+                        <img class="img-thumbnail mb-3 mt-3" src="/media/screenshots/5.gif">
                         You will be allocated a syndicate number. Nothing more needs to be done - sit back, relax and
                         wait for ballot day.<br><br>
                         If you change your mind, and want to be added to somebody's syndicate, it's no problem! Just get in touch
