--- a/rooms/roomballot/templates/roomballot/info-select-room.html
+++ b/rooms/roomballot/templates/roomballot/info-select-room.html
@@ -100,10 +100,10 @@
                     <p class="mt-3">
                         Selecting your room is a piece of cake. When it's time to choose your room, navigate to the room
                         you want to pick. Then click 'select this room'.
-                        <img class="img-thumbnail mb-3 mt-3" src="https://ballot.downingjcr.co.uk/media/screenshots/6.gif">
+                        <img class="img-thumbnail mb-3 mt-3" src="/media/screenshots/6.gif">
                         If your selection is successful, you'll see your room on your Dashboard. If you've made a mistake,
                         and want to change your selection, please get in touch through livechat, or email an administrator
-                        at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.
+                        at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.<br><br>
                     </p>
                 </div>
             </div>
