--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -84,11 +84,16 @@
         <div class="col-md-3 col-sm-12 mb-4 d-md-block sidebar">
             <div class="list-group">
                 <a href="/roomballot/info" class="list-group-item active"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
-                <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
-                <a href="/roomballot/info/create-syndicate" class="list-group-item"><i class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
-                <a href="/roomballot/info/individual" class="list-group-item"><i class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
-                <a href="/roomballot/info/select-room" class="list-group-item"><i class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
-                <a href="/roomballot/about" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
+                <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i>
+                    <span>Bursaries & Rent Reduction</span></a>
+                <a href="/roomballot/info/create-syndicate" class="list-group-item"><i
+                        class="fa fa-question-circle"></i><span>Creating a Syndicate</span></a>
+                <a href="/roomballot/info/individual" class="list-group-item"><i
+                        class="fa fa-question-circle"></i><span>Ballot as an Individual</span></a>
+                <a href="/roomballot/info/select-room" class="list-group-item"><i
+                        class="fa fa-question-circle"></i><span>Selecting a Room</span></a>
+                <a href="/roomballot/about" class="list-group-item"><i
+                        class="fa fa-question-circle"></i><span>About</span></a>
             </div>
         </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4 mb-4">
@@ -162,9 +167,9 @@
                             </div>
                             <div id="collapseThree" class="collapse" data-parent="#accordion">
                                 <div class="card-body">
-                                    You can feature on the ballot in two ways: either a individual or as part of a
+                                    You can feature on the ballot in two ways: either as an individual or as part of a
                                     syndicate. A syndicate
-                                    is a way for a group of people (Maximum 6 people) can choose rooms at the same time
+                                    is a way for a group of people (maximum 6 people) to choose rooms at the same time
                                     as each other. If
                                     you want to live with a certain group of people next year, being in a syndicate with
                                     them is a way to
@@ -208,11 +213,43 @@
                             </div>
                             <div id="collapseFive" class="collapse" data-parent="#accordion">
                                 <div class="card-body">
-                                    No. You are entitled to drop of the room ballot if you so wish and look for out of
-                                    college
+                                    No. You are entitled to drop of the room ballot if you so wish and look for
+                                    out-of-college
                                     accommodation. However if you change your mind there is no guarantee that college
-                                    will be able
-                                    to provide accommodation to you.
+                                    will be able to provide accommodation to you.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingSix">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                            data-target="#collapseSix">
+                                        Long Contract vs Short Contract
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseSix" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    There are two broad types of rooms to consider when choosing:<br><br>
+                                    <ol type="a">
+                                        <li>
+                                            Long contract rooms are on a 38 week contract, meaning that you can leave
+                                            stuff
+                                            in your room over the Michaelmas and Easter Vac. All the rooms in the
+                                            Lensfield
+                                            houses are long contract along with all the rooms in I and M staircases.
+                                            Some other
+                                            rooms have the option of 38 week contracts if desired (e.g. S staircase), so
+                                            please
+                                            calculate your rents with this in mind and enquire on ballot day, if you
+                                            want this.<br><br>
+                                        </li>
+                                        <li>
+                                            Short contract rooms are the rest of the rooms in college, on a 30 week
+                                            contract.
+                                        </li>
+                                    </ol>
                                 </div>
                             </div>
                         </div>
