--- a/rooms/roomballot/templates/roomballot/room-manage.html
+++ b/rooms/roomballot/templates/roomballot/room-manage.html
@@ -126,7 +126,7 @@
                     <div class="alert alert-info">
                         <h4>Something wrong?</h4>
                         <p>If you think these details should be changed, please contact the JCR Internet Officer at
-                        <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk.</a></p>
+                        <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.</p>
                     </div>
                 </div>
             </div>
