--- a/rooms/roomballot/templates/roomballot/about.html
+++ b/rooms/roomballot/templates/roomballot/about.html
@@ -98,11 +98,11 @@
                 </div>
                 <div class="border-top">
                     <p class="mt-3">
-                        This system was created, with love, by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
+                        This system was created with &#10084; by Cameron O'Connor, JCR Internet Officer 2018-19. It is released under the MIT
                         Licence, and the source is available on <a href="https://github.com/dowjcr/rooms" target="blank">GitHub</a>.
                         The backend uses the <a href="https://www.djangoproject.com/" target="blank">Django</a> framework, while the UI is simply
                         built using Bootstrap and a little jQuery.<br><br>
-                        If you have any suggestions about how the system can be improved, please feel free to contact the Internet Officer
+                        If you have any feedback or suggestions about how the system can be improved, please feel free to contact the Internet Officer
                         at <a href="mailto:internet@jcr.dow.cam.ac.uk">internet@jcr.dow.cam.ac.uk</a>.
                     </p>
                 </div>
