--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -118,7 +118,7 @@
                                 </h5>
                             </div>
 
-                            <div id="collapseOne" class="collapse show" data-parent="#accordion">
+                            <div id="collapseOne" class="collapse" data-parent="#accordion">
                                 <div class="card-body">
                                     The room ballot is an ordered list of first and second year students - where your
                                     position in the ballot
@@ -234,13 +234,13 @@
                                     There are two broad types of rooms to consider when choosing:<br><br>
                                     <ol type="a">
                                         <li>
-                                            Long contract rooms are on a 38 week contract, meaning that you can leave
+                                            Long contract rooms are on a 38-week contract, meaning that you can leave
                                             stuff
-                                            in your room over the Michaelmas and Easter Vac. All the rooms in the
+                                            in your room over the Michaelmas and Easter Vacations. All the rooms in the
                                             Lensfield
-                                            houses are long contract along with all the rooms in I and M staircases.
+                                            houses are long contract, along with all the rooms in I and M staircases.
                                             Some other
-                                            rooms have the option of 38 week contracts if desired (e.g. S staircase), so
+                                            rooms have the option of 38-week contracts if desired (e.g. S staircase), so
                                             please
                                             calculate your rents with this in mind and enquire on ballot day, if you
                                             want this.<br><br>
