Extended name field lengths, removed create syndicate link ahead of production

--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -120,7 +120,7 @@
                     {% else %}
                         {% if student.syndicate == None and student.year == 1 %}
                             <p>You haven't created, or been invited to, a syndicate yet.</p>
-                            <a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>
+                            <!--<a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>-->
                         {% elif student.syndicate != None and student.year == 1 %}
                             <p>You've been invited to a syndicate. Accept the invite now!</p>
                             <a href="dashboard/syndicate" class="btn btn-primary">Accept Invite</a>
@@ -141,7 +141,9 @@
                         <a href="ranking" class="btn btn-primary">View Ranking</a>
                     {% else %}
                         <p>You are ranked <b>{{ student.rank }} out of all students.</b><br>
-                            You'll pick your room on {{ student.picks_at }}</p>
+                            {% if student.picks_at is not None %}
+                                You'll pick your room on {{ student.picks_at }}</p>
+                            {% endif %}
                         <a href="ranking" class="btn btn-primary">View Ranking</a>
                     {% endif %}
                 {% else %}
