--- a/rooms/roomballot/templates/roomballot/staircase-view.html
+++ b/rooms/roomballot/templates/roomballot/staircase-view.html
@@ -89,7 +89,7 @@
 
     <div class="row mb-4 mt-4">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mb-1">
-            <table class="table table-bordered">
+            <table class="table table-bordered table-hover">
                 <thead>
                 <tr>
                     <th scope="col">Room Number</th>
